# init-python-repo

./: .coverage  .markdownlint.json  README.md  create_repo.py  init-python-repo.sh  pyproject.toml
.claude/: settings.local.json
init_python_repo/: __init__.py  cli.py  config.py  generator.py  templates.py
tests/: __init__.py  test_config.py
