[project]
name = "init-python-repo"
version = "0.2.0"
description = "A composable, best-practice Python repository bootstrapper"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["python", "boilerplate", "project-generator", "template", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
init-python-repo = "init_python_repo.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/init-python-repo"
Repository = "https://github.com/yourusername/init-python-repo"
Issues = "https://github.com/yourusername/init-python-repo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["init_python_repo"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=init_python_repo --cov-report=term-missing"
